@@ -18,6 +18,7 @@ package org.apache.solr.cloud.overseer;
 
 import static org.apache.solr.cloud.overseer.CollectionMutator.checkCollectionKeyExistence;
 
+import com.google.common.collect.ImmutableSet;
 import java.lang.invoke.MethodHandles;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -49,7 +50,8 @@ public class SliceMutator {
   public static final String PREFERRED_LEADER_PROP =
       CollectionAdminParams.PROPERTY_PREFIX + "preferredleader";
 
-  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES = Set.of(PREFERRED_LEADER_PROP);
+  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES =
+      ImmutableSet.of(PREFERRED_LEADER_PROP);
 
   protected final SolrCloudManager cloudManager;
   protected final DistribStateManager stateManager;
@@ -160,7 +162,7 @@ public class SliceMutator {
           ZkCoreNodeProps.getCoreUrl(
               replica.getBaseUrl(), replica.getStr(ZkStateReader.CORE_NAME_PROP));
 
-      if (replica.equals(oldLeader) && !coreURL.equals(leaderUrl)) {
+      if (replica == oldLeader && !coreURL.equals(leaderUrl)) {
         replica = ReplicaMutator.unsetLeader(replica);
       } else if (coreURL.equals(leaderUrl)) {
         newLeader = replica = ReplicaMutator.setLeader(replica);
