@@ -18,6 +18,7 @@ package org.apache.solr.analytics.value;
 
 import java.time.Instant;
 import java.time.format.DateTimeParseException;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
@@ -34,18 +35,24 @@ public class CastingDateValueTest extends SolrTestCaseJ4 {
     Date date = Date.from(Instant.parse("1800-01-01T10:30:15Z"));
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof DateValue);
+    DateValue casted = (DateValue) val;
+
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    assertEquals(date.toInstant(), ((DateValue) val).getDate().toInstant());
-    assertTrue(((DateValue) val).exists());
+    assertEquals(date.toInstant(), casted.getDate().toInstant());
+    assertTrue(casted.exists());
   }
 
   @Test
   public void stringCastingTest() {
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof StringValue);
+    StringValue casted = (StringValue) val;
+
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    assertEquals("1800-01-01T10:30:15Z", ((StringValue) val).getString());
-    assertTrue(((StringValue) val).exists());
+    assertEquals("1800-01-01T10:30:15Z", casted.getString());
+    assertTrue(casted.exists());
   }
 
   @Test
@@ -53,9 +60,12 @@ public class CastingDateValueTest extends SolrTestCaseJ4 {
     Date date = Date.from(Instant.parse("1800-01-01T10:30:15Z"));
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof AnalyticsValue);
+    AnalyticsValue casted = (AnalyticsValue) val;
+
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    assertEquals(date.toInstant(), ((Date) ((AnalyticsValue) val).getObject()).toInstant());
-    assertTrue(((AnalyticsValue) val).exists());
+    assertEquals(date.toInstant(), ((Date) casted.getObject()).toInstant());
+    assertTrue(casted.exists());
   }
 
   @Test
@@ -63,23 +73,24 @@ public class CastingDateValueTest extends SolrTestCaseJ4 {
     Date date = Date.from(Instant.parse("1800-01-01T10:30:15Z"));
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof DateValueStream);
+    DateValueStream casted = (DateValueStream) val;
+
     // No values
     val.setExists(false);
-    ((DateValueStream) val)
-        .streamDates(
-            value -> {
-              fail("There should be no values to stream");
-            });
+    casted.streamDates(
+        value -> {
+          fail("There should be no values to stream");
+        });
 
     // Multiple Values
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    Iterator<Date> values = List.of(date).iterator();
-    ((DateValueStream) val)
-        .streamDates(
-            value -> {
-              assertTrue(values.hasNext());
-              assertEquals(values.next().toInstant(), value.toInstant());
-            });
+    Iterator<Date> values = Arrays.asList(date).iterator();
+    casted.streamDates(
+        value -> {
+          assertTrue(values.hasNext());
+          assertEquals(values.next().toInstant(), value.toInstant());
+        });
     assertFalse(values.hasNext());
   }
 
@@ -87,23 +98,24 @@ public class CastingDateValueTest extends SolrTestCaseJ4 {
   public void stringStreamCastingTest() {
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof StringValueStream);
+    StringValueStream casted = (StringValueStream) val;
+
     // No values
     val.setExists(false);
-    ((StringValueStream) val)
-        .streamStrings(
-            value -> {
-              fail("There should be no values to stream");
-            });
+    casted.streamStrings(
+        value -> {
+          fail("There should be no values to stream");
+        });
 
     // Multiple Values
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
-    Iterator<String> values = List.of("1800-01-01T10:30:15Z").iterator();
-    ((StringValueStream) val)
-        .streamStrings(
-            value -> {
-              assertTrue(values.hasNext());
-              assertEquals(values.next(), value);
-            });
+    Iterator<String> values = Arrays.asList("1800-01-01T10:30:15Z").iterator();
+    casted.streamStrings(
+        value -> {
+          assertTrue(values.hasNext());
+          assertEquals(values.next(), value);
+        });
     assertFalse(values.hasNext());
   }
 
@@ -112,23 +124,24 @@ public class CastingDateValueTest extends SolrTestCaseJ4 {
     Date date = Date.from(Instant.parse("1800-01-01T10:30:15Z"));
     TestDateValue val = new TestDateValue();
 
+    assertTrue(val instanceof AnalyticsValueStream);
+    AnalyticsValueStream casted = (AnalyticsValueStream) val;
+
     // No values
     val.setExists(false);
-    ((AnalyticsValueStream) val)
-        .streamObjects(
-            value -> {
-              fail("There should be no values to stream");
-            });
+    casted.streamObjects(
+        value -> {
+          fail("There should be no values to stream");
+        });
 
     // Multiple Values
     val.setValue("1800-01-01T10:30:15Z").setExists(true);
     Iterator<Object> values = List.<Object>of(date).iterator();
-    ((AnalyticsValueStream) val)
-        .streamObjects(
-            value -> {
-              assertTrue(values.hasNext());
-              assertEquals(values.next(), value);
-            });
+    casted.streamObjects(
+        value -> {
+          assertTrue(values.hasNext());
+          assertEquals(values.next(), value);
+        });
     assertFalse(values.hasNext());
   }
 
